--- a/SpainAppProto/FrontView.xib
+++ b/SpainAppProto/FrontView.xib
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="FrontView" customModule="SpainAppProto" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -49,6 +50,9 @@
                                     <include reference="kEy-cY-RnC"/>
                                 </mask>
                             </variation>
+                            <connections>
+                                <action selector="openMenu:" destination="iN0-l3-epB" eventType="touchUpInside" id="sKY-yd-Pl7"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lr7-cW-nB4">
                             <rect key="frame" x="-23" y="-15" width="46" height="30"/>
@@ -69,6 +73,9 @@
                                     <include reference="z1V-hO-Ti8"/>
                                 </mask>
                             </variation>
+                            <connections>
+                                <action selector="search:" destination="iN0-l3-epB" eventType="touchUpInside" id="wBu-St-MUa"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" red="1" green="0.88172027663520469" blue="0.74371953882804975" alpha="1" colorSpace="calibratedRGB"/>
@@ -92,11 +99,11 @@
                             <exclude reference="dkG-Ux-IK4"/>
                             <exclude reference="PTA-SM-B2y"/>
                             <exclude reference="Pue-dQ-5gL"/>
+                            <exclude reference="KUc-gm-vaX"/>
+                            <exclude reference="wCP-oT-0H3"/>
                             <exclude reference="Mbo-tc-3Bt"/>
                             <exclude reference="RqE-gS-bYa"/>
                             <exclude reference="lhp-a4-BJH"/>
-                            <exclude reference="KUc-gm-vaX"/>
-                            <exclude reference="wCP-oT-0H3"/>
                         </mask>
                     </variation>
                     <variation key="heightClass=regular-widthClass=compact">
@@ -109,39 +116,85 @@
                             <include reference="dkG-Ux-IK4"/>
                             <include reference="PTA-SM-B2y"/>
                             <include reference="Pue-dQ-5gL"/>
+                            <include reference="KUc-gm-vaX"/>
+                            <include reference="wCP-oT-0H3"/>
                             <include reference="Mbo-tc-3Bt"/>
                             <include reference="RqE-gS-bYa"/>
                             <include reference="lhp-a4-BJH"/>
-                            <include reference="KUc-gm-vaX"/>
-                            <include reference="wCP-oT-0H3"/>
                         </mask>
                     </variation>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ci7-mb-kCH">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <color key="backgroundColor" red="0.68286018606691701" green="1" blue="0.22984653160731128" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="173" id="S0G-BN-D5b"/>
+                    </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="S0G-BN-D5b"/>
+                        </mask>
+                    </variation>
+                    <variation key="heightClass=regular-widthClass=compact">
+                        <mask key="constraints">
+                            <include reference="S0G-BN-D5b"/>
+                        </mask>
+                    </variation>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="brZ-Hq-eS8">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <color key="backgroundColor" red="0.79692497137071483" green="1" blue="0.97211197749723532" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="ci7-mb-kCH" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="DCn-LS-d68"/>
                 <constraint firstItem="W2V-GU-W2M" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="MbF-rD-17g"/>
+                <constraint firstAttribute="bottom" secondItem="brZ-Hq-eS8" secondAttribute="bottom" id="Q74-wQ-GCA"/>
                 <constraint firstItem="W2V-GU-W2M" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Sse-9q-fn0"/>
+                <constraint firstAttribute="trailing" secondItem="brZ-Hq-eS8" secondAttribute="trailing" id="Yv8-OA-nyz"/>
                 <constraint firstAttribute="trailing" secondItem="W2V-GU-W2M" secondAttribute="trailing" id="c1Z-uZ-Ttr"/>
+                <constraint firstAttribute="trailing" secondItem="ci7-mb-kCH" secondAttribute="trailing" id="dKO-R2-VhB"/>
+                <constraint firstItem="ci7-mb-kCH" firstAttribute="top" secondItem="W2V-GU-W2M" secondAttribute="bottom" id="dWy-u6-Zz8"/>
+                <constraint firstItem="brZ-Hq-eS8" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="pBf-eL-7Nj"/>
+                <constraint firstItem="brZ-Hq-eS8" firstAttribute="top" secondItem="ci7-mb-kCH" secondAttribute="bottom" id="sPR-UH-tmd"/>
             </constraints>
             <variation key="default">
                 <mask key="subviews">
                     <exclude reference="W2V-GU-W2M"/>
+                    <exclude reference="ci7-mb-kCH"/>
+                    <exclude reference="brZ-Hq-eS8"/>
                 </mask>
                 <mask key="constraints">
                     <exclude reference="MbF-rD-17g"/>
                     <exclude reference="Sse-9q-fn0"/>
                     <exclude reference="c1Z-uZ-Ttr"/>
+                    <exclude reference="Q74-wQ-GCA"/>
+                    <exclude reference="Yv8-OA-nyz"/>
+                    <exclude reference="pBf-eL-7Nj"/>
+                    <exclude reference="sPR-UH-tmd"/>
+                    <exclude reference="DCn-LS-d68"/>
+                    <exclude reference="dKO-R2-VhB"/>
+                    <exclude reference="dWy-u6-Zz8"/>
                 </mask>
             </variation>
             <variation key="heightClass=regular-widthClass=compact">
                 <mask key="subviews">
                     <include reference="W2V-GU-W2M"/>
+                    <include reference="ci7-mb-kCH"/>
+                    <include reference="brZ-Hq-eS8"/>
                 </mask>
                 <mask key="constraints">
                     <include reference="MbF-rD-17g"/>
                     <include reference="Sse-9q-fn0"/>
                     <include reference="c1Z-uZ-Ttr"/>
+                    <include reference="Q74-wQ-GCA"/>
+                    <include reference="Yv8-OA-nyz"/>
+                    <include reference="pBf-eL-7Nj"/>
+                    <include reference="sPR-UH-tmd"/>
+                    <include reference="DCn-LS-d68"/>
+                    <include reference="dKO-R2-VhB"/>
+                    <include reference="dWy-u6-Zz8"/>
                 </mask>
             </variation>
         </view>
